Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-71297

Coverity analysis defect 134120: Fix VersionType::currentVersion parsing

    • Fully Compatible
    • ALL
    • v6.2
    • Sharding EMEA 2022-11-28

      Self assignment

      The variable's value will not change, so the assignment has no effect. Assignment of a variable or expression to itself has no effect
      /src/mongo/s/catalog/type_config_version.cpp:102: NO_EFFECT 134120 Assigning "version._currentVersion" to itself has no effect.

            Assignee:
            tommaso.tocci@mongodb.com Tommaso Tocci
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: