SERVER-71297 Coverity analysis defect 134120: Fix VersionType::currentVersion parsing